activate debug messages; - fix compilers flag

--- a/examples/butenhof_prog_POSIX_threads/Makefile
+++ b/examples/butenhof_prog_POSIX_threads/Makefile
@@ -1,5 +1,8 @@
+# debug
+DEBUGFLAGS = -DDEBUG
+
 # Digital UNIX 4.0 compilation flags:
-CFLAGS=-std1 -pthread -g -w1 $(DEBUGFLAGS)
+CFLAGS=-pthread -g $(DEBUGFLAGS)
 RTFLAGS=-lrt
 
 # Solaris 2.5 compilation flags:
